<resources>
    <string name="app_name">Exersice3</string>
    <string name="action_settings">Settings</string>
    <string name="add_joke">Add Joke</string>
    <string name="like_image">Like or Dislike image</string>
    <string name="title_activity_edit_joke">EditJoke</string>
    <string name="edit_text">Edit</string>
    <string name="like_button">Like</string>
    <string name="dislike_button">Dislike</string>
    <string name="delete_text">Delete</string>
    <string name="done_button">Done</string>
    <string name="go_to_joke_list">MENU</string>

    <string name="add_joke_field">Insert joke here</string>
    <string name="add_joke_author">Author</string>
    <string name="add_joke_date">Date</string>
    <string name="add_joke_button">Add Joke</string>

    <string name="menu_item_change_background">Change background</string>
    <string name="menu_item_add_joke">Add joke</string>
    <string name="menu_item_exit">Exit</string>
    <string name="menu_item_green">Green</string>
    <string name="menu_item_red">Red</string>
    <string name="menu_item_blue">Blue</string>
    <string name="dialog_exit_message">Are you sure you want to exit?</string>
    <string name="dialog_exit_title">Exiting Program</string>
    <string name="dialog_save_joke_message">Would you like to save the joke?</string>
    <string name="dialog_save_joke_title">Saving Joke</string>
    <string name="dialog_joke_too_short_message">Joke too short!</string>
    <string name="dialog_error_title">Error</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_activity_action_bar">actionBar</string>
    <string name="title_activity_joke">JokeActivity</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

</resources>
